--- a/ionic-mobile/elektron/www/css/elektron.css
+++ b/ionic-mobile/elektron/www/css/elektron.css
@@ -10,6 +10,10 @@
   margin-top: 10px;
 }
 
+.button-paginado {
+  padding: 0px !important;
+}
+
 .logout-spinner-text{
   color: white;
   font-weight: lighter;
