modificaciones de statistics

--- a/ionic-mobile/elektron/www/templates/statistics.html
+++ b/ionic-mobile/elektron/www/templates/statistics.html
@@ -18,7 +18,7 @@
             <div class="item">
               <div class="row">
                 <div class="col">
-                  <span>Consumo: <b>{{component.data_sum | number:1 }}kw ({{ component.prom_total || 0 | number:1 }}% del total)</b></span>
+                  <span>Consumo: <b>{{component.data_sum | number:1 }} W ({{ component.device_percent || 0 | number:1 }}% del total)</b></span>
                 </div>
               </div>
               <div class="row">
