statistics: web y movil. Tabla comparativa completa y grafico de tortas full

--- a/ionic-mobile/elektron/www/css/elektron.css
+++ b/ionic-mobile/elektron/www/css/elektron.css
@@ -14,6 +14,10 @@
   padding: 0px !important;
 }
 
+.elipsis {
+  text-overflow: ellipsis;
+}
+
 .logout-spinner-text{
   color: white;
   font-weight: lighter;
