tareas datetimetask y datatask con manejo de errores y mejorada la parte de editar/agregar

--- a/ionic-mobile/elektron/www/templates/datatask.html
+++ b/ionic-mobile/elektron/www/templates/datatask.html
@@ -73,7 +73,7 @@
         <div class="item">
           <div class="button-bar">
             <a ng-show="editButton == false" ng-click="addDataTask(task)" class="button button-positive icon ion-ios-bolt">
-              Programar tarea
+              Agregar tarea
             </a>
             <a ng-show="editButton == true" ng-click="editDataTask(task)" class="button button-positive icon ion-ios-bolt">
               Editar tarea
