--- a/ionic-mobile/elektron/www/templates/components.html
+++ b/ionic-mobile/elektron/www/templates/components.html
@@ -1,13 +1,5 @@
 <ion-view view-title="Componentes">
   <ion-content>
-    <!--
-    <ion-list>
-      <ion-item ng-repeat="profilelist in profiles" class="item item-avatar" href="#/app/profile/{{profilelist.id}}">
-        <img ng-src="{{profilelist.face}}">
-  		  <h2>{{profilelist.name}}</h2>
-  		  <p>({{profilelist.deseg}})</p>
-      </ion-item>
-    </ion-list>-->
     <div class="card">
       <div class="item item-divider">
           Componentes
@@ -24,11 +16,8 @@
           </div>
       </div>
     </div>
-    <!--<ion-list>
-      <ion-item ng-repeat="sense in sensado" class="item item-avatar">
-        <p>{{sense.sensor_id}}</p>
-        <p>{{sense.location}}</p>
-      </ion-item>
-    </ion-list> -->
+    <div ng-show="spinner == true" class="center-spinner">
+      <ion-spinner icon="android"></ion-spinner>
+    </div>
   </ion-content>
 </ion-view>
