--- a/ionic-mobile/elektron/www/templates/graphic-history.html
+++ b/ionic-mobile/elektron/www/templates/graphic-history.html
@@ -6,6 +6,9 @@
           <div ng-show="showiconloading"><i class="icon ion-loop calm"></i></div>
       </div>
       <div class="item item-text-wrap">
+        <div ng-show="spinner == true" class="center-spinner">
+          <ion-spinner icon="android"></ion-spinner>
+        </div>
         <canvas id="line" class="chart chart-line" chart-data="line.data" chart-labels="line.labels" chart-series="line.series" chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick"></canvas>
       </div>
       <div class="button-bar bar-stable">
