--- a/ionic-mobile/elektron/www/templates/monitor.html
+++ b/ionic-mobile/elektron/www/templates/monitor.html
@@ -10,6 +10,9 @@
               </div>
         </div>
       </div>
+      <div ng-show="spinner == true" class="center-spinner">
+        <ion-spinner icon="android"></ion-spinner>
+      </div>
       <div class="card" ng-repeat="component in components_server" ng-show="{{ component.devicestate.name == 'on' && component.enabled==true}}">
           <div class="item item-divider item-icon-right">
             Componente: <b>{{component.label}}</b>
