--- a/ionic-mobile/elektron/www/templates/statistics.html
+++ b/ionic-mobile/elektron/www/templates/statistics.html
@@ -8,14 +8,22 @@
           <a class="button button-positive" ng-show="listado == false">Graficos</a>
         </div>
       </div>
+
+      <div ng-show="spinner == true" class="center-spinner">
+
+        <ion-spinner icon="android"></ion-spinner>
+
+      </div>
+
       <div ng-show="listado == true" class="card" ng-repeat="component in components_statistics">
+
         <div class="item item-divider">
             <b>Componente:</b> {{component.device.label}}
             <span ng-if="component.device.devicestate.name == 'on'" class="badge-component badge badge-balanced">encendido</span>
             <span ng-if="component.device.devicestate.name == 'off'" class="badge-component badge badge-assertive">apagado</span>
         </div>
         <div class="list">
-            <div class="item">
+            <div class="item idem-padding-statistics">
               <div class="row">
                 <div class="col">
                   <span>Consumo: <b>{{component.data_sum | number:1 }} W ({{ component.device_percent || 0 | number:1 }}% del total)</b></span>
@@ -31,27 +39,30 @@
                   <span class="">Co2: <b>{{ component.total_co2 | number:1 }} Kg</b></span>
                 </div>
               </div>
+              <span class="badge badge-positive badge-statistics-last">Último: {{ component.last_data.value || 0 }} w</span>
+            </div>
+            <div class="item text-center-statistics">
+              <span>Último período</span>
             </div>
             <div class="item">
               <div class="row">
-                  <span>Última medición: <b> {{ component.last_data.date | date:'dd/MM/yyyy HH:mm' }}</b></span>
-                  <span class="badge badge-energized"><b> {{ component.last_data.value || 0 }}</b></span>
+                <div class="col">
+                  <span class="elipsis"><b>Desde</b> {{ component.state_period_from | date:'dd/MM/yyyy HH:mm' }}<br><b>Hasta</b> {{ component.state_period_to | date:'dd/MM/yyyy HH:mm' }}.</span>
+                </div>
+                <div class="col align-right-text">
+                  <b>Consumo período</b><br>
+                  <b class="positive">{{ component.data_list_sum_states || 0 }} w</b>
+                </div>
               </div>
             </div>
-            <div class="item">
-              <div class="row">
-                  <span class="elipsis">Último período:<br><b>desde</b> {{ component.state_period_from | date:'dd/MM/yyyy HH:mm' }}<br><b>hasta</b> {{ component.state_period_to | date:'dd/MM/yyyy HH:mm' }}.</span>
-                  <span class="badge badge-light"><b>{{ component.data_list_sum_states || 0 }}</b></span>
-              </div>
-            </div>
-            <div class="item">
+            <div class="item text-center-statistics">
               <div class="row">
                 <div class="col">
                   <span>Encendidos: <b>{{component.device.state_counter_on}}</b></span>
                 </div>
                 <div class="col">
                 </div>
-                <div class="col">
+                <div class="col align-right-text">
                   <span>Apagados: <b>{{component.device.state_counter_off}}</b></span>
                 </div>
               </div>
