--- a/ionic-mobile/elektron/www/templates/tasks.html
+++ b/ionic-mobile/elektron/www/templates/tasks.html
@@ -17,6 +17,9 @@
           </a>
         </div>
       </div>
+      <div ng-show="spinner == true" class="center-spinner">
+        <ion-spinner icon="android"></ion-spinner>
+      </div>
       <div class="card" ng-repeat="task in datatasks_server">
         <div class="list">
             <div class="item item-divider">
